Switch pattern matching trial, java version, some utility